# itch-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/itch/: games_call.h  main.h  read_key.h
src/: main.cpp
src/api/: games_call.cpp
src/utils/: read_key.cpp
